# cube_bot

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
config-templates/: anon.json  rules.json
migration/: README.md
migration/src/: lib.rs  m20230111_215131_create_anon_tags_table.rs  m20230111_215146_create_anon_muted_table.rs  m20230111_223717_create_users_table.rs
src/: bot.ts  deploy-commands.ts  global.d.ts  index.ts  main.rs
src/anon/: anon.rs  anon_retag.rs  mod.rs  tags_registry.rs
src/bot-framework/: command.ts  index.ts  initializer.ts  interaction-listeners.ts  interactions.ts  modal.ts
src/db/: mod.rs  users.rs
src/db/anon/: anon_muted.rs  anon_tags.rs  mod.rs
src/discord-wrappers/: channels.ts  guild.ts  index.ts  interactions.ts  member.ts
src/modules/: anon.ts  rules.ts  suggestions.ts
src/util/: discord.ts  index.ts
src/utils/: errors.rs  index.ts  mod.rs
src/utils/discord/: channel.rs
